fix(admin): correct analytics response mapping and replace alerts with toasts